# software-testing-workshop-pycon-us-2026

./: .gitignore  .pre-commit-config.yaml  .synced-from  AGENTS.md  LICENSE  README.md  justfile  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
docs/: prep.md
modules/1.1_warm_up_temp_script/: README.md  convert_c_to_f_DEMO.py  convert_f_to_c_START.py
modules/1.2_unittest_and_pytest/: README.md  convert_f_to_c_START.py
modules/1.3_structuring_a_test/: AAA_DEMO.py  README.md  test_aaa_START.py
modules/1.4_targeting/: README.md  targeting_DEMO.md  test_targeting_DEMO.py  test_targeting_START.py
modules/1.5_package_structure/: README.md  pyproject.toml
modules/1.5_package_structure/src/converter/: convert_temp.py  convert_weight.py
modules/1.5_package_structure/test/: test_convert_temp.py  test_convert_weight.py
modules/2.1_unit_test_todotracker/: README.md  test_todo_unit_DEMO.py  test_todo_unit_START.py  todo.py
modules/2.2_integration_test_todotracker/: README.md  test_todo_integration_DEMO.py  test_todo_integration_START.py
modules/2.3_parameterized_tests/: README.md  test_convert_c_to_f_DEMO.py  test_convert_f_to_c_START.py
modules/2.4_fixtures/: README.md  test_file_todo_DEMO.py  test_file_todo_START.py  test_file_todo_unittest_DEMO.py  test_todo_fixture_DEMO.py  todo.py
modules/3.1_dependency_injection/: README.md  etl.py  output.csv  storage.py  test_etl_START.py
modules/3.2_snapshot_testing/: README.md  gnarly.py  test_snapshot_START.py
modules/side_quests/flakiness_cleanup/: test_flakiness_cleanup_START.py
modules/side_quests/flakiness_race/: test_flakiness_race_START.py
modules/side_quests/pytest_approx/: test_pytest_approx_START.py
modules/side_quests/tdd_cycle/: test_tdd_cycle_START.py
solutions/1.1_warm_up_temp_script/: test_convert_f_to_c_warmup.py
solutions/1.2_unittest_and_pytest/: test_pytest_style.py  test_unittest_style.py
solutions/1.3_structuring_a_test/: test_aaa.py
solutions/2.1_unit_test_todotracker/: conftest.py  test_todo_unit.py
solutions/2.2_integration_test_todotracker/: conftest.py  test_todo_integration.py
solutions/2.3_parameterized_tests/: test_convert_f_to_c_parametrized.py
solutions/2.4_fixtures/: conftest.py  test_file_todo.py  test_sqlite_todo.py  todo.py
solutions/3.1_dependency_injection/: conftest.py  test_etl.py
solutions/3.2_snapshot_testing/: conftest.py  test_snapshot.py
