[project]
name = "software-testing-workshop"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "pre-commit>=4.0.0",
    "ipython>=8.30.0",
    "temperature-converter",
]

[tool.uv.sources]
temperature-converter = { workspace = true }

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Workshop-friendly defaults: format + a small set of high-signal lint rules.
# E + F are pyflakes/pycodestyle basics. I is import-sorting. UP is pyupgrade.
# PLC0415 catches imports inside functions/methods (encourages top-of-file
# imports; lazy imports are an exception, see per-file-ignores).
select = ["E", "F", "I", "UP", "PLC0415"]
ignore = [
    "E501",  # line-too-long handled by formatter where it can
]

[tool.ruff.lint.per-file-ignores]
# `_START.py` files are exercise scaffolds. Unused-variable placeholders are
# intentional; students fill them in.
"**/*_START.py" = ["F841"]
# storage.py uses intentional lazy imports for boto3 / sqlalchemy so the
# module loads cleanly without those cloud SDKs installed (production-style
# pattern; documented inline).
"modules/3.1_dependency_injection/storage.py" = ["PLC0415"]

[tool.pyright]
# Non-strict on purpose. The workshop is a teaching repo; full type
# annotations are a separate side quest. "basic" still catches obvious
# bugs (None where a list is expected, missing attributes, etc).
typeCheckingMode = "basic"

# Test files reach into each module via per-directory conftest.py / pytest
# rootdir tricks. Pyright doesn't see those, so dial the import-resolution
# noise down. `reportArgumentType` drops to warning because some test fakes
# duck-type ABCs intentionally to teach the substitution point.
reportMissingImports = "none"
reportArgumentType = "warning"

exclude = [
    "**/__pycache__",
    "**/.venv",
    "modules/1.5_package_structure/.venv",
]

[tool.uv.workspace]
members = [
    "modules/1.5_package_structure",
]
